--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "vitest-mock-extended": "^3.1.0"
   }
 }
